# Data-Driven-Public-Health-Monitoring-Platform

./: README.md  advanced_ml_models.py  alert_system.py  api_endpoints.py  app.py  auth.py  automated_data_pipeline.py  data_sources.py  database_alert_system.py  database_data_sources.py  database_models.py  database_service.py  ml_interface.py  personalized_dashboard.py  pipeline_interface.py  predictive_models.py  pyproject.toml  realtime_data_ingestion.py  streaming_interface.py  visualizations.py  websocket_streaming.py
attached_assets/: Pasted-Project-Idea-3-Data-Driven-Public-Health-Tracker-with-Predictive-Alerts-One-Sentence-Description--1758666919138_1758666919140.txt
pages/: 1_Environmental_Data.py  2_Disease_Monitoring.py  3_Hospital_Capacity.py  4_Predictive_Analytics.py  5_Geospatial_View.py  5_Real-time_Streaming.py  6_Alert_Dashboard.py
