[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "plotly>=6.3.0",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "websockets>=15.0.1",
    "joblib>=1.5.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
